<resources>
    <string name="app_name">Ayos!</string>
    <string name="getStarted">GET STARTED</string>
    <string name="welcome">Welcome!</string>
    <string name="emailHint">Your Email Address</string>
    <string name="pwordHint">Your Password</string>
    <string name="login">LOGIN</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="noAccount">No account yet? Sign up here.</string>
    <string name="backButton">Back Button</string>
    <string name="signup">SIGN UP</string>
    <string name="supportSignUp">Sign up as a customer to get started with Ayos!</string>
    <string name="supportWorkerSignUp">Sign up as a worker to partner with Ayos!</string>
    <string name="workerSignUp">SIGN UP here as an Ayos! worker</string>
    <string name="customerSignUp">SIGN UP here as an Ayos! customer</string>
    <string name="createAccount">Create Account</string>
    <string name="emailaddHint">Email Address</string>
    <string name="lastnameHint">Last Name</string>
    <string name="firstnameHint">First Name</string>
    <string name="middlenameHint">Middle Name</string>
    <string name="birthDateHint">Date of Birth</string>
    <string name="mobilnoHint">Mobile Number</string>
    <string name="landlinenoHint">Landline Number</string>
    <string name="addressHint">Address</string>
    <string name="cityHint">City</string>
    <string name="servicesHint">What services do you want to work in?</string>
    <string name="barangayClearanceHint">UPLOAD BRGY. CLEARANCE / NATIONAL ID</string>
    <string name="passwordHint">Password</string>
    <string name="retypePassword">Retype Password</string>
    <string name="choicesRg">Lastly, are you signing up as a…</string>
    <string name="customerHint">Customer</string>
    <string name="ayosWorkerHint">Ayos! Worker</string>
    <string name="termsConditions">By clicking Sign Up, you agree to all the Terms and Conditions.</string>
    <string name="alreadyUser">Already have an Account? Login here.</string>
    <string name="emailVerificationPrompt">A verification email has been sent to your inbox.</string>
    <string name="resendVerification">Resend verification?</string>
    <string name="backToLogin">BACK TO LOGIN</string>
    <string name="supportForgotPassword">Input your email to make a new password.</string>
    <string name="registeredEmail">Enter your registered email</string>
    <string name="newPassword">Enter your new password</string>
    <string name="confirmNewPassword">Confirm new password</string>
    <string name="saveNewPassword">RESET PASSWORD</string>
    <string name="home">HOME</string>
    <string name="ayosAppliance">Ayos Appliance</string>
    <string name="ayosElectrical">Ayos Electrical</string>
    <string name="ayosPlumbing">Ayos Plumbing</string>
    <string name="ayosAircon">Ayos Aircon</string>
    <string name="yourName">Your Name</string>
    <string name="yourEmail">email@address.com</string>
    <string name="personalInfo">PERSONAL INFO</string>
    <string name="ayosWorker">PARTNER US!</string>
    <string name="contactUs">CONTACT US</string>
    <string name="aboutUs">ABOUT US</string>
    <string name="logOut">LOG OUT</string>
    <string name="editProfile">Edit/Save Profile</string>
    <string name="sendInquiry">Send us an inquiry</string>
    <string name="subjectTitle">Subject Title</string>
    <string name="bodyText">Write your inquiry here...</string>
    <string name="submit">SUBMIT</string>
    <string name="contactResponse">Our Ayos! team will get back to you.</string>
    <string name="statusBooked">Booked</string>
    <string name="statusMatched">Matched</string>
    <string name="statusInProgress">In Progress</string>
    <string name="statusExtended">Extended</string>
    <string name="statusAyosNa">Ayos Na!</string>
    <string name="statusCancelled">Cancelled</string>
    <string name="serviceAddress">Service Address</string>
    <string name="serviceDate">Service Date</string>
    <string name="serviceCategory">Service Category</string>
    <string name="breakdownCost">Breakdown Cost</string>
    <string name="bookingFee">Booking Fee</string>
    <string name="serviceFee">Service Fee</string>
    <string name="extraDayFee">Extra Day Fee</string>
    <string name="totalFee">TOTAL</string>
    <string name="paymentOptions">PAYMENT OPTION</string>
    <string name="paymentGcash">ONLINE</string>
    <string name="paymentCash">CASH</string>
    <string name="paymentCredit">CREDIT CARD</string>
    <string name="paymentOthers">OTHERS</string>
    <string name="paymentStatus">PAYMENT STATUS</string>
    <string name="paymentStatusPaid">Paid</string>
    <string name="paymentStatusUnpaid">Unpaid</string>
    <string name="paymentStatusIncomplete">Incomplete</string>
    <string name="paymentStatusOverdue">Overdue</string>
    <string name="matchingworker">Matching Worker</string>
    <string name="submitReport">REPORT</string>
    <string name="cancel">CANCEL</string>
    <string name="personalFirstName">First Name</string>
    <string name="personalMiddleName">Middle Name</string>
    <string name="personalLastName">Last Name</string>
    <string name="personalMobileNumber">Mobile Number</string>
    <string name="changeFirstName">Edit your first name</string>
    <string name="changeMiddleName">Edit your middle name</string>
    <string name="changeLastName">Edit your last name</string>
    <string name="changeMobileNumber">Edit your mobile number</string>
    <string name="cancelBtn">CANCEL</string>
    <string name="saveBtn">SAVE</string>
    <string name="aboutUsDetails"> \t\tAyos! was first created in November 2022 by a group of Benildean students—namely Deneb Ho, Samuel Noel, and Abigail Magpatoc,—Ayos! as their thesis project. Its mission is not just to be an app, but to be a handy and accessible tool para sa masa.
        \n\n\t\tThe app was initially introduced as a booking-app for Taft residents who were not familiar with their local community of repairmen, especially in the
        midst of the pandemic. However, Ayos! largened its scope to the whole Metro Manila area to further assist those who are in need—without worry and without
        ease! The Ayos! app services the following categories—Ayos Electrical, Ayos Plumbing, Ayos Appliance, and Ayos Aircon—to which registered Ayos! workers
        can accept the booking and provide their services at the provided time and date. </string>
    <string name="title_activity_ayos_booking">AyosBookingActivity</string>
    <string name="plumbingdesc">Our plumbing service provides a wide choice of solutions to your household issues such as clogged drains and toilets,leaky faucets and pipes, water heater issues, low water pressure, and a running toilet.
         \n \n<b>SERVICE DETAILS</b>
        \n <b>Ayos\!</b> offers services for <i> multiple plumbing unit installation and assembly and plumbing repair for your sink and toilets at home</i>
        \n \n <b>TAGA-AYOS</b>
        \n <i>Taga-Ayos</i> or Ayos\! worker got you covered as they are professional, skilled and certified TESDA Graduates.
        \n \n <b>REMINDERS</b>
        \n -Please check all your details if correct.
        \n -The projected price does not include any additional services that the client requests that are not covered by the agreement.
        \n -Don\'t forget to give us your feedbacks after the transaction.</string>
    <string name="aircondesc">The air conditioning unit has to be cleaned every two months, did you know that? Make an appointment with Ayos\! for cleaning so that your air conditioner is properly maintained.
        \n \n<b>SERVICE DETAILS</b>
        \n <b>Ayos\!</b> offers services for <i> the installation, troubleshooting, and maintenance of Air Conditioning Units such as Central Air Conditioner, Ductless Mini-Split, Window Air Conditioner, Portable Air Condition and other type of aircon perfect for household.</i>
        \n \n <b>TAGA-AYOS</b>
        \n <i>Taga-Ayos</i> or Ayos\! worker got you covered as they are professional, skilled and certified TESDA Graduates.
        \n \n <b>REMINDERS</b>
        \n -Please check all your details if correct.
        \n -The projected price does not include any additional services that the client requests that are not covered by the agreement.
        \n -Don\'t forget to give us your feedbacks after the transaction.</string>
    <string name="electricaldesc">Ayos\! technicians are experts who are capable of installing and repairing home wiring. Book now for electrical wiring services at reasonable prices!
        \n \n<b>SERVICE DETAILS</b>
        \n <b>Ayos\!</b> offers services for <i> residential wiring and cabling works for single-phase distribution, electrical protective devices for distribution and power-lighting protecting and grounding systems. </i>
        \n \n <b>TAGA-AYOS</b>
        \n <i>Taga-Ayos</i> or Ayos\! worker got you covered as they are professional, skilled and certified TESDA Graduates.
        \n \n <b>REMINDERS</b>
        \n -Please check all your details if correct.
        \n -The projected price does not include any additional services that the client requests that are not covered by the agreement.
        \n -Don\'t forget to give us your feedbacks after the transaction.</string>
    <string name="appliancedesc">Have a broken washing machine? television? or rice cooker? We got you covered\! Our skilled appliance technicians will help you maintain and repair your appliances.
        \n \n<b>SERVICE DETAILS</b>
        \n <b>Ayos\!</b> offers service <i> repair for handling electronically controlled domestic appliances such as washing machines, televisions, rice cookers, water heaters, fans, toaster ovens and speakers. </i>
        \n \n <b>TAGA-AYOS</b>
        \n <i>Taga-Ayos</i> or Ayos\! worker got you covered as they are professional, skilled and certified TESDA Graduates.
        \n \n <b>REMINDERS</b>
        \n -Please check all your details if correct.
        \n -The projected price does not include any additional services that the client requests that are not covered by the agreement.
        \n -Don\'t forget to give us your feedbacks after the transaction.</string>
    <string name="first_fragment_label">Location Fragment</string>
    <string name="second_fragment_label">Address Fragment</string>
    <string name="third_fragment_label">Details Fragment</string>
    <string name="fourth_fragment_label">Review Fragment</string>
    <string name="addaddress">+ Add Address</string>
    <string name="editaddress">Edit Address</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>