<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/createAccount"
            android:textSize="36sp"
            android:paddingLeft="5dp"
            android:textStyle="bold"
            android:textColor="@color/primary_blue"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/supportSignUp"
            android:textSize="16sp"
            android:paddingLeft="10dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/emailAddEt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/floating_edittextwhite"
            android:layout_marginTop="40dp"
            android:paddingLeft="20dp"
            android:hint="@string/emailaddHint"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:drawablePadding="8dp"/>


        <EditText
            android:id="@+id/firstName_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/floating_edittextwhite"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:hint="@string/firstnameHint"
            android:textColor="@color/black"
            android:drawablePadding="8dp"/>

        <EditText
            android:id="@+id/middleName_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/floating_edittextwhite"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:hint="@string/middlenameHint"
            android:textColor="@color/black"
            android:drawablePadding="8dp"/>

        <EditText
            android:id="@+id/lastName_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/floating_edittextwhite"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:hint="@string/lastnameHint"
            android:textColor="@color/black"
            android:drawablePadding="8dp"/>

        <EditText
            android:id="@+id/dateofBirth_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/floating_edittextwhite"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:hint="@string/birthDateHint"
            android:inputType="date"
            android:textColor="@color/black"
            android:drawablePadding="8dp"/>

        <EditText
            android:id="@+id/mobileNo_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/floating_edittextwhite"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:hint="@string/mobilnoHint"
            android:inputType="number"
            android:textColor="@color/black"
            android:drawablePadding="8dp"/>

        <EditText
            android:id="@+id/landlineNo_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/floating_edittextwhite"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:hint="@string/landlinenoHint"
            android:inputType="number"
            android:textColor="@color/black"
            android:drawablePadding="8dp"/>

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/floating_edittextwhite"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:drawablePadding="8dp"/>

        <EditText
            android:id="@+id/retypepasswordEt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/floating_edittextwhite"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:hint="@string/retypePassword"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:drawablePadding="8dp"/>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/primary_blue"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>