<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:padding="24dp"
    tools:context=".ForgotPasswordActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/floating_backshapeblue"
        android:contentDescription="@string/backButton"
        android:src="@drawable/baseline_arrow_back_24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="150dp"
        android:text="@string/forgotPassword"
        android:textColor="@color/primary_blue"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="16dp"
        android:text="@string/supportForgotPassword"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/registeredEmail_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/floating_edittextwhite"
        android:drawablePadding="8dp"
        android:hint="@string/registeredEmail"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/resetPasswordBtn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/primary_blue"
        android:text="@string/saveNewPassword"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>