<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:padding="24dp"
    tools:context=".SignupActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/backButton"
                            android:contentDescription="@string/backButton"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/baseline_arrow_back_24"
                            android:background="@drawable/floating_backshapeblue" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/createAccount"
                            android:textSize="36sp"
                            android:textStyle="bold"
                            android:textColor="@color/primary_blue"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/supportSignUp"
                            android:textSize="16sp"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/workerTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/workerSignUp"
                            android:textColor="@color/primary_blue"
                            android:textSize="18sp"
                            android:textStyle="bold" />


                        <EditText
                            android:id="@+id/emailAddEt"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/floating_edittextwhite"
                            android:drawablePadding="8dp"
                            android:hint="@string/emailaddHint"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:paddingStart="20dp"
                            android:textColor="@color/black" />

                        <EditText
                            android:id="@+id/passwordEt"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/floating_edittextwhite"
                            android:layout_marginTop="20dp"
                            android:paddingStart="20dp"
                            android:hint="@string/passwordHint"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:drawablePadding="8dp"/>

                        <EditText
                            android:id="@+id/retypepasswordEt"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/floating_edittextwhite"
                            android:layout_marginTop="20dp"
                            android:paddingStart="20dp"
                            android:hint="@string/retypePassword"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:drawablePadding="8dp"/>

                        <Button
                            android:id="@+id/signupBtn"
                            android:layout_width="180dp"
                            android:layout_height="60dp"
                            android:layout_marginTop="20dp"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/primary_blue"
                            android:text="@string/signup"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                </LinearLayout>
        </ScrollView>

</LinearLayout>