<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:padding="24dp"
    tools:context=".WelcomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Let's get started"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@color/primary_blue"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Input your personal info to start"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/firstName_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/floating_edittextwhite"
                android:drawablePadding="8dp"
                android:hint="@string/firstnameHint"
                android:imeOptions="actionNext"
                android:paddingStart="20dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/lastName_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/floating_edittextwhite"
                android:drawablePadding="8dp"
                android:hint="@string/lastnameHint"
                android:imeOptions="actionNext"
                android:paddingStart="20dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/phoneNo_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/floating_edittextwhite"
                android:drawablePadding="8dp"
                android:hint="@string/mobilnoHint"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:paddingStart="20dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/dateofBirth_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/floating_edittextwhite"
                android:drawablePadding="8dp"
                android:hint="@string/birthDateHint"
                android:imeOptions="actionNext"
                android:inputType="none"
                android:paddingStart="20dp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/saveDetailsBtn"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/primary_blue"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>